The category manager.

--- a/DarkSouls/DarkSouls.csproj
+++ b/DarkSouls/DarkSouls.csproj
@@ -108,6 +108,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\Categories.xml" />
     <Content Include="Resources\darksouls_logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
