Fixes and updates based on feedback.

--- a/Morrowind/Morrowind.csproj
+++ b/Morrowind/Morrowind.csproj
@@ -89,6 +89,9 @@
       <Name>Util</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Categories.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\lib\AutoIncrementVersion.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
