--- a/WorldOfTanks/WorldOfTanks.csproj
+++ b/WorldOfTanks/WorldOfTanks.csproj
@@ -108,6 +108,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Categories.xml" />
     <Content Include="Resources\wot_logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
