--- a/Fallout3/Fallout3.csproj
+++ b/Fallout3/Fallout3.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{211400C3-E73E-4EBA-A9C7-9900DF9E7719}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -99,6 +99,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\fo3_logo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Categories.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\lib\AutoIncrementVersion.targets" />
