--- a/FalloutNV/FalloutNV.csproj
+++ b/FalloutNV/FalloutNV.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{BD5A9056-F832-4DE4-97B2-38AB62342382}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -95,6 +95,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\tes_logo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Categories.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\lib\AutoIncrementVersion.targets" />
