--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -282,6 +282,7 @@
     <None Include="Resources\expand_all.png" />
     <None Include="Resources\switch_view.png" />
     <None Include="Resources\category_folder.png" />
+    <None Include="Resources\side_panel.png" />
     <Content Include="Resources\tes_logo.ico" />
     <None Include="Resources\text-x-generic.png" />
     <None Include="Resources\unendorsed_small.png" />
