--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -332,6 +332,7 @@
     <Compile Include="ModManagement\InstallationLog\Upgraders\Upgrade0400Task.cs" />
     <Compile Include="ModManagement\ModUpdateCheckTask.cs" />
     <Compile Include="ModManagement\ReadMeManager\ReadMeManager.cs" />
+    <Compile Include="ModManagement\ReadMeSetupTask.cs" />
     <Compile Include="ModRepositories\FileServerZone.cs" />
     <Compile Include="ModRepositories\FileserverInfo.cs" />
     <Compile Include="ModRepositories\ModCategory.cs" />
