The file server selection will now show "Europen Union" instead of single europen countries, and the UI will show the country flags.

--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -286,6 +286,8 @@
     <None Include="Resources\switch_view.png" />
     <None Include="Resources\category_folder.png" />
     <None Include="Resources\side_panel.png" />
+    <None Include="Resources\cz.png" />
+    <None Include="Resources\europeanunion.png" />
     <Content Include="Resources\tes_logo.ico" />
     <None Include="Resources\update_warning_disabled.png" />
     <None Include="Resources\update_warning.png" />
