Adds Witcher 2 REDKit mods support.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -64,18 +64,24 @@
 				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				  name="WOTNexusREST" >
 			</endpoint>
-      <endpoint address="http://grimrock.nexusmods.com/"
-				  binding="webHttpBinding"
-				  bindingConfiguration="NexusBinding"
-				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-				  name="LOGNexusREST" >
-      </endpoint>
-      <endpoint address="http://darksouls.nexusmods.com/"
-				  binding="webHttpBinding"
-				  bindingConfiguration="NexusBinding"
-				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-				  name="DSNexusREST" >
-      </endpoint>
+			<endpoint address="http://grimrock.nexusmods.com/"
+					  binding="webHttpBinding"
+					  bindingConfiguration="NexusBinding"
+					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+					  name="LOGNexusREST" >
+			</endpoint>
+			<endpoint address="http://darksouls.nexusmods.com/"
+					  binding="webHttpBinding"
+					  bindingConfiguration="NexusBinding"
+					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+					  name="DSNexusREST" >
+			</endpoint>
+			<endpoint address="http://witcher.nexusmods.com/"
+					  binding="webHttpBinding"
+					  bindingConfiguration="NexusBinding"
+					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+					  name="W2NexusREST" >
+			</endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
