Dragon Age implementation

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -23,64 +23,64 @@
 		</bindings>
 		<client>
 			<endpoint address="http://gatekeeper.nexusmods.com/"
-					  binding="webHttpBinding"
-					  bindingConfiguration="NexusBinding"
-					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-					  name="GatekeeperNexusREST" >
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="GatekeeperNexusREST" >
 			</endpoint>
 			<endpoint address="http://oblivion.nexusmods.com/"
-				  binding="webHttpBinding"
-				  bindingConfiguration="NexusBinding"
-				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-				  name="OBNexusREST" >
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="OBNexusREST" >
 			</endpoint>
 			<endpoint address="http://morrowind.nexusmods.com/"
-				  binding="webHttpBinding"
-				  bindingConfiguration="NexusBinding"
-				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-				  name="MWNexusREST" >
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="MWNexusREST" >
 			</endpoint>
 			<endpoint address="http://newvegas.nexusmods.com/"
-					  binding="webHttpBinding"
-					  bindingConfiguration="NexusBinding"
-					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-					  name="FONVNexusREST" >
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="FONVNexusREST" >
 			</endpoint>
 			<endpoint address="http://fallout3.nexusmods.com/"
-					  binding="webHttpBinding"
-					  bindingConfiguration="NexusBinding"
-					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-					  name="FO3NexusREST" >
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="FO3NexusREST" >
 			</endpoint>
 			<endpoint address="http://skyrim.nexusmods.com/"
-					  binding="webHttpBinding"
-					  bindingConfiguration="NexusBinding"
-					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-					  name="SKYRIMNexusREST" >
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="SKYRIMNexusREST" >
 			</endpoint>
 			<endpoint address="http://worldoftanks.nexusmods.com/"
-				  binding="webHttpBinding"
-				  bindingConfiguration="NexusBinding"
-				  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-				  name="WOTNexusREST" >
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="WOTNexusREST" >
 			</endpoint>
 			<endpoint address="http://grimrock.nexusmods.com/"
-					  binding="webHttpBinding"
-					  bindingConfiguration="NexusBinding"
-					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-					  name="LOGNexusREST" >
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="LOGNexusREST" >
 			</endpoint>
 			<endpoint address="http://darksouls.nexusmods.com/"
-					  binding="webHttpBinding"
-					  bindingConfiguration="NexusBinding"
-					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-					  name="DSNexusREST" >
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="DSNexusREST" >
 			</endpoint>
-			<endpoint address="http://witcher.nexusmods.com/"
-					  binding="webHttpBinding"
-					  bindingConfiguration="NexusBinding"
-					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
-					  name="W2NexusREST" >
+			<endpoint address="http://dragonage.nexusmods.com/"
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="DAONexusREST" >
 			</endpoint>
 		</client>
 	</system.serviceModel>
