Adds Dragon Age 2 support

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -82,6 +82,12 @@
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="DAONexusREST" >
 			</endpoint>
+			<endpoint address="http://dragonage2.nexusmods.com/"
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="DA2NexusREST" >
+			</endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
