Witcher2 new url

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -88,6 +88,12 @@
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="DA2NexusREST" >
 			</endpoint>
+			<endpoint address="http://witcher2.nexusmods.com/"
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="W2NexusREST" >
+			</endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
