Support for XRebirth

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -94,6 +94,12 @@
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="W2NexusREST" >
 			</endpoint>
+      <endpoint address="http://xrebirth.nexusmods.com/"
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="XRNexusREST" >
+      </endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
