--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -22,84 +22,84 @@
 			</webHttpBinding>
 		</bindings>
 		<client>
-			<endpoint address="http://gatekeeper.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="GatekeeperNexusREST" >
 			</endpoint>
-			<endpoint address="http://oblivion.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/oblivion/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="OBNexusREST" >
 			</endpoint>
-			<endpoint address="http://morrowind.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/morrowind/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="MWNexusREST" >
 			</endpoint>
-			<endpoint address="http://newvegas.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/newvegas/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="FONVNexusREST" >
 			</endpoint>
-			<endpoint address="http://fallout3.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/fallout3/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="FO3NexusREST" >
 			</endpoint>
-			<endpoint address="http://skyrim.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/skyrim/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="SKYRIMNexusREST" >
 			</endpoint>
-			<endpoint address="http://worldoftanks.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/worldoftanks/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="WOTNexusREST" >
 			</endpoint>
-			<endpoint address="http://grimrock.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/grimrock/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="LOGNexusREST" >
 			</endpoint>
-			<endpoint address="http://darksouls.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/darksouls/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="DSNexusREST" >
 			</endpoint>
-			<endpoint address="http://dragonage.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/dragonage/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="DAONexusREST" >
 			</endpoint>
-			<endpoint address="http://dragonage2.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/dragonage2/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="DA2NexusREST" >
 			</endpoint>
-			<endpoint address="http://witcher2.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/witcher2/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="W2NexusREST" >
 			</endpoint>
-      <endpoint address="http://xrebirth.nexusmods.com/"
+			<endpoint address="http://nmm.nexusmods.com/xrebirth/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="XRNexusREST" >
-      </endpoint>
+			</endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
