Some functions still used the old domain.

--- a/NexusClient/Properties/Settings.settings
+++ b/NexusClient/Properties/Settings.settings
@@ -9,7 +9,7 @@
 			<Value Profile="(Default)">
 				&lt;KeyedSettingsOfString&gt;
 					&lt;item key="Beta Wiki"&gt;
-						&lt;string&gt;http://wiki.tesnexus.com/index.php/Category:NMM&lt;/string&gt;
+						&lt;string&gt;http://wiki.nexusmods.com/index.php/Category:NMM&lt;/string&gt;
 					&lt;/item&gt;
 					&lt;item key="Beta Forums"&gt;
 						&lt;string&gt;http://forums.nexusmods.com/index.php?/forum/439-open-beta-feedback/&lt;/string&gt;
