--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -105,13 +105,13 @@
 	<applicationSettings>
 		<Nexus.Client.Properties.Settings>
 			<setting name="ModManagerUrl" serializeAs="String">
-				<value>http://www.tesnexus.com/content/modmanager/</value>
+				<value>http://www.nexusmods.com/content/modmanager/</value>
 			</setting>
 			<setting name="HelpLinks" serializeAs="Xml">
 				<value>
 					<KeyedSettingsOfString>
 						<item key="Beta Wiki">
-							<string>http://wiki.tesnexus.com/index.php/Category:NMM</string>
+							<string>http://wiki.nexusmods.com/index.php/Category:NMM</string>
 						</item>
 						<item key="Beta Forums">
 							<string>http://forums.nexusmods.com/index.php?/forum/439-open-beta-feedback/</string>
