--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -100,6 +100,12 @@
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="XRNexusREST" >
 			</endpoint>
+			<endpoint address="http://nmm.nexusmods.com/teso/"
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="TESONexusREST" >
+			</endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
