--- a/ModManager.Interface/ModManager.Interface.csproj
+++ b/ModManager.Interface/ModManager.Interface.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Games\IGameModeEnvironmentInfo.cs" />
     <Compile Include="Games\InstallationPathAutoDetector.cs" />
     <Compile Include="Games\SetupBaseVM.cs" />
+    <Compile Include="Games\Steam\KeyValue.cs" />
+    <Compile Include="Games\Steam\StreamHelpers.cs" />
     <Compile Include="Games\Theme.cs" />
     <Compile Include="Games\Settings\RequiredDirectoriesControl.cs">
       <SubType>UserControl</SubType>
