Fixed the elderscrollsonline URL.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -100,7 +100,7 @@
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="XRNexusREST" >
 			</endpoint>
-			<endpoint address="http://nmm.nexusmods.com/teso/"
+			<endpoint address="http://nmm.nexusmods.com/elderscrollsonline/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
