MAYNARDLOO: Added support for State of Decay

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -106,6 +106,12 @@
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="TESONexusREST" >
 			</endpoint>
+			<endpoint address="http://nmm.nexusmods.com/stateofdecay/"
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="SODNexusREST" >
+			</endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
