This adds basic support for Dark Souls 2 mods.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -76,6 +76,12 @@
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="DSNexusREST" >
 			</endpoint>
+			<endpoint address="http://nmm.nexusmods.com/darksouls2/"
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="DS2NexusREST" >
+			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/dragonage/"
 				binding="webHttpBinding"
 				bindingConfiguration="NexusBinding"
