This will add support for the War Thunder game.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -124,6 +124,12 @@
 				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 				name="SODNexusREST" >
 			</endpoint>
+			<endpoint address="http://nmm.nexusmods.com/warthunder/"
+				binding="webHttpBinding"
+				bindingConfiguration="NexusBinding"
+				contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+				name="WTNexusREST" >
+			</endpoint>
 		</client>
 	</system.serviceModel>
 	<applicationSettings>
