--- a/WarThunder/WarThunder.csproj
+++ b/WarThunder/WarThunder.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{95B11EB6-4C4C-4E58-99CE-D92246E7E86F}</ProjectGuid>
+    <ProjectGuid>{058540C6-2029-4B4A-A6C7-03154853FDBB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Nexus.Client.Games.DarkSouls2</RootNamespace>
-    <AssemblyName>DarkSouls2</AssemblyName>
+    <RootNamespace>Nexus.Client.Games.WarThunder</RootNamespace>
+    <AssemblyName>WarThunder</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -51,23 +51,23 @@
     <Compile Include="Settings\UI\GeneralSettingsPage.Designer.cs">
       <DependentUpon>GeneralSettingsPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="Tools\DarkSouls2ToolLauncher.cs" />
-    <Compile Include="DarkSouls2Launcher.cs" />
+    <Compile Include="Tools\WarThunderToolLauncher.cs" />
+    <Compile Include="WarThunderLauncher.cs" />
     <Compile Include="SetupForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="SetupForm.Designer.cs">
       <DependentUpon>SetupForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DarkSouls2SetupVM.cs" />
-    <Compile Include="DarkSouls2GameModeFactory.cs" />
+    <Compile Include="WarThunderSetupVM.cs" />
+    <Compile Include="WarThunderGameModeFactory.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="DarkSouls2GameModeDescriptor.cs" />
-    <Compile Include="DarkSouls2GameMode.cs" />
+    <Compile Include="WarThunderGameModeDescriptor.cs" />
+    <Compile Include="WarThunderGameMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -108,8 +108,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\Categories.xml" />
-    <Content Include="Resources\DarkSouls2_logo.ico" />
+    <None Include="Resources\Categories.xml" />
+    <Content Include="Resources\WarThunder_logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\lib\AutoIncrementVersion.targets" />
